readme updated and html page updated

--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -12,6 +12,25 @@
   </section>
 </div>
 
+<div class="content_top">
+  
+<section class="left"> We introduced themes in kiosk app for
+customized deployment in each retail
+location. Application can be customized to
+easily apply a brand-specific theme
+according to what retailer the machine(s)
+will be placed in. </section>
+
+<section class="right"> We introduced themes in kiosk app for
+customized deployment in each retail
+location. Application can be customized to
+easily apply a brand-specific theme
+according to what retailer the machine(s)
+will be placed in. </section>
+
+
+</div>
+
 </div>
 
 <button (click)="generatePdf()"> Generate PDF</button>
